refactor: use Set.of() instead of Collections.singleton()
UTCProvider.AVAILABLE_IDS is a fixed, never-mutated single-element set;
Set.of() is the modern equivalent with the same immutability contract.